src/test/deca/syntax/parser/invalid/class_definition_reserved_word.deca
// Test parser, déclaration d'une classe avec un mot réservé

class if {
    
}